# aggregator

./: .cursorrules  .gitignore  Kraken_api_keys.md  RAILWAY_DEPLOYMENT.md  RAILWAY_NEXT_STEPS.md  README.md  RWA_Aggregator_Implementation_Guide.md  RWA_Dashboard_APIs.md  RWA_Liquidity_Aggregator_MVP_Specification.docx  RWA_Liquidity_Aggregator_MVP_Specification.md  conftest.py  debug_tokens_output.txt  docker-compose.yml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  test_output.txt
backend/: ENV_EXAMPLE.md  alembic.ini
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/rwa_aggregator/: __init__.py
backend/app/rwa_aggregator/application/: __init__.py  exceptions.py
backend/app/rwa_aggregator/application/dto/: __init__.py  alert_dto.py  price_dto.py
backend/app/rwa_aggregator/application/interfaces/: __init__.py  price_feed.py
backend/app/rwa_aggregator/application/use_cases/: __init__.py  create_alert.py  get_aggregated_prices.py
backend/app/rwa_aggregator/domain/: __init__.py  supported_pairs.py
backend/app/rwa_aggregator/domain/entities/: __init__.py  alert.py  price_snapshot.py  token.py  venue.py
backend/app/rwa_aggregator/domain/repositories/: __init__.py  alert_repository.py  price_repository.py  token_repository.py  venue_repository.py
backend/app/rwa_aggregator/domain/services/: __init__.py  alert_policy.py  price_calculator.py
backend/app/rwa_aggregator/domain/value_objects/: __init__.py  email_address.py  price.py  spread.py
backend/app/rwa_aggregator/infrastructure/: __init__.py
backend/app/rwa_aggregator/infrastructure/db/: __init__.py  models.py  session.py
backend/app/rwa_aggregator/presentation/: __init__.py
backend/scripts/: __init__.py  check_db.py  check_market_type.py  run_migrations.py  seed_data.py  test_price_feeds.py  test_price_fetcher.py  test_rio_token.py
tests/: __init__.py
tests/application/: __init__.py  test_create_alert.py  test_get_aggregated_prices.py
tests/domain/: __init__.py
tests/infrastructure/: __init__.py
tests/presentation/: __init__.py
tests/presentation/api/: test_alerts.py  test_prices.py  test_tokens.py
tests/presentation/web/: __init__.py  test_dashboard.py
(+24 files in other folders)
